syntax = "proto3";

package processor.v1;

import "common.proto";

option go_package = "github.com/yaanno/upload-store-process/proto/processor/v1";

service ProcessorService {
    // Trigger file processing
    rpc ProcessFile(ProcessFileRequest) returns (ProcessFileResponse) {}
    
    // Get processing status
    rpc GetProcessingStatus(ProcessingStatusRequest) returns (ProcessingStatusResponse) {}
}

// Request to process a file
message ProcessFileRequest {
    string upload_id = 1;
    string file_path = 2;
    common.v1.FileMetadata file_metadata = 3;
}

// Response after initiating processing
message ProcessFileResponse {
    common.v1.Response base_response = 1;
    string job_id = 2;
}

// Request to check processing status
message ProcessingStatusRequest {
    string job_id = 1;
}

// Detailed processing status
message ProcessingStatusResponse {
    enum Status {
        PENDING = 0;
        PROCESSING = 1;
        COMPLETED = 2;
        FAILED = 3;
    }
    
    common.v1.Response base_response = 1;
    Status current_status = 2;
    string details = 3;
    repeated string processed_files = 4;
}
