syntax = "proto3";

package shared.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/yaanno/upload-store-process/gen/go/shared/v1";

// Standard response structure for all services
message Response {
  // Standardized status codes
  enum StatusCode {
    STATUS_CODE_OK_UNSPECIFIED = 0;
    STATUS_CODE_CANCELLED = 1;
    STATUS_CODE_UNKNOWN = 2;
    STATUS_CODE_INVALID_ARGUMENT = 3;
    STATUS_CODE_DEADLINE_EXCEEDED = 4;
    STATUS_CODE_NOT_FOUND = 5;
    STATUS_CODE_ALREADY_EXISTS = 6;
    STATUS_CODE_PERMISSION_DENIED = 7;
    STATUS_CODE_RESOURCE_EXHAUSTED = 8;
    STATUS_CODE_FAILED_PRECONDITION = 9;
    STATUS_CODE_ABORTED = 10;
    STATUS_CODE_OUT_OF_RANGE = 11;
    STATUS_CODE_UNIMPLEMENTED = 12;
    STATUS_CODE_INTERNAL = 13;
    STATUS_CODE_UNAVAILABLE = 14;
    STATUS_CODE_DATA_LOSS = 15;
    STATUS_CODE_UNAUTHENTICATED = 16;
  }

  // Overall status of the response
  StatusCode code = 1;

  // Human-readable message
  string message = 2;

  // Optional error details
  string error_details = 3;

  // Timestamp of the response
  int64 timestamp = 4;

  // Trace/request ID for logging and debugging
  string trace_id = 5;
}

message FileMetadata {
  string file_id = 1;
  string original_filename = 2;
  int64 file_size_bytes = 3;
  string content_type = 4;
  string user_id = 5;
  string storage_path = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  FileStatus status = 9;
}

enum FileStatus {
  FILE_STATUS_UNSPECIFIED = 0;
  FILE_STATUS_PENDING = 1;
  FILE_STATUS_UPLOADING = 2;
  FILE_STATUS_COMPLETE = 3;
  FILE_STATUS_FAILED = 4;
  FILE_STATUS_PROCESSING = 5;
}

enum ProcessingStatus {
  PROCESSING_STATUS_UNKNOWN_UNSPECIFIED = 0;
  PROCESSING_STATUS_QUEUED = 1;
  PROCESSING_STATUS_PROCESSING = 2;
  PROCESSING_STATUS_COMPLETED = 3;
  PROCESSING_STATUS_FAILED = 4;
}